<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    tools:context=".scenes.main.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/big_div"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/searchText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:hint="@string/search_hint"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textSize="@dimen/text_big" />

            <LinearLayout
                android:id="@+id/pinnedLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_div"
                    android:layout_marginBottom="@dimen/small_div"
                    android:text="@string/pinned"
                    android:textColor="@color/gray_400"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/mainPinnedRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/small_div"
                        android:overScrollMode="never"
                        tools:itemCount="2"
                        tools:listitem="@layout/activity_main_recycler_view_item" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:textColor="@color/gray_400"
                    android:textSize="@dimen/text_small"
                    android:textStyle="bold" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/mainOtherRecycler"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/small_div"
                    android:overScrollMode="never"
                    tools:itemCount="3"
                    tools:listitem="@layout/activity_main_recycler_view_item">

                </androidx.recyclerview.widget.RecyclerView>
            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/big_div"
        android:layout_marginRight="@dimen/big_div"
        android:layout_marginBottom="@dimen/big_div"
        android:clickable="true"
        android:contentDescription="@string/ellipses"
        android:focusable="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/white" />

</FrameLayout>
